Bug 243894 - Location is sometimes incorrect even after mouse hover exit.
Summary: Location is sometimes incorrect even after mouse hover exit.
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: UI Events (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Megan Gardner
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2022-08-12 12:17 PDT by Megan Gardner
Modified: 2022-08-12 15:53 PDT (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Megan Gardner 2022-08-12 12:17:55 PDT
Location is sometimes incorrect even after mouse hover exit.
Comment 1 Megan Gardner 2022-08-12 12:25:06 PDT
Pull request: https://github.com/WebKit/WebKit/pull/3272
Comment 2 EWS 2022-08-12 15:52:39 PDT
Committed 253393@main (1abe78b77ddd): <https://commits.webkit.org/253393@main>

Reviewed commits have been landed. Closing PR #3272 and removing active labels.
Comment 3 Radar WebKit Bug Importer 2022-08-12 15:53:16 PDT
<rdar://problem/98590868>