Cherry-pick 1abe78b77ddd. rdar://problem/97351363

Location is sometimes incorrect even after mouse hover exit.
    https://bugs.webkit.org/show_bug.cgi?id=243894

    Reviewed by Wenson Hsieh.

    Track when we are in the cancelled/exited state and ensure a clear location.

    * Source/WebKit/UIProcess/ios/WKMouseGestureRecognizer.mm:
    (-[WKMouseGestureRecognizer setEnabled:]):
    (-[WKMouseGestureRecognizer _hoverEntered:withEvent:]):
    (-[WKMouseGestureRecognizer _hoverMoved:withEvent:]):
    (-[WKMouseGestureRecognizer _hoverExited:withEvent:]):
    (-[WKMouseGestureRecognizer locationInView:]):

    Canonical link: https://commits.webkit.org/253393@main

Canonical link: https://commits.webkit.org/252432.197@safari-7614-branch