Source/WebKit/UIProcess/ios/WKMouseGestureRecognizer.mm
@@ -63,6 +63,7 @@ static String pointerTypeForUITouchType(UITouchType)
     RetainPtr<UITouch> _currentTouch;
 
     BOOL _touching;
+    BOOL _cancelledOrExited;
 
     std::unique_ptr<WebKit::NativeWebMouseEvent> _lastEvent;
     std::optional<CGPoint> _lastLocation;
@@ -80,6 +81,7 @@ static String pointerTypeForUITouchType(UITouchType)
         _lastEvent = nil;
         _lastLocation = std::nullopt;
         _pressedButtonMask = std::nullopt;
+        _cancelledOrExited = YES;
     }
 }
 
@@ -185,6 +187,7 @@ static String pointerTypeForUITouchType(UITouchType)
 
 - (void)_hoverEntered:(NSSet<UITouch *> *)touches withEvent:(UIEvent *)event
 {
+    _cancelledOrExited = NO;
     _lastEvent = [self createMouseEventWithType:WebKit::WebEvent::MouseMove wasCancelled:NO];
 
     if (_currentHoverEvent == nil && touches.count == 1 && [event isKindOfClass:NSClassFromString(@"UIHoverEvent")]) {
@@ -202,6 +205,7 @@ static String pointerTypeForUITouchType(UITouchType)
         return;
     }
 
+    _cancelledOrExited = NO;
     _lastEvent = [self createMouseEventWithType:WebKit::WebEvent::MouseMove wasCancelled:NO];
     _lastLocation = [self locationInView:self.view];
 
@@ -211,6 +215,7 @@ static String pointerTypeForUITouchType(UITouchType)
 
 - (void)_hoverExited:(NSSet<UITouch *> *)touches withEvent:(UIEvent *)event
 {
+    _cancelledOrExited = YES;
     _lastEvent = [self createMouseEventWithType:WebKit::WebEvent::MouseMove wasCancelled:NO];
     _lastLocation = [self locationInView:self.view];
 
@@ -228,7 +233,7 @@ static String pointerTypeForUITouchType(UITouchType)
 
 - (CGPoint)locationInView:(UIView *)view
 {
-    if (!_currentTouch)
+    if (!_currentTouch || _cancelledOrExited)
         return CGPointMake(-1, -1);
     return [_currentTouch locationInView:view];
 }
